@@ -7,19 +7,20 @@ import com.example.luvisluvproject.domain.tag.dto.TagRequestDto;
 import com.example.luvisluvproject.domain.tag.dto.TagResponseDto;
 import com.example.luvisluvproject.domain.tag.entity.MemberTag;
 import com.example.luvisluvproject.domain.tag.entity.Tag;
+import com.example.luvisluvproject.domain.tag.enums.TagCategory;
 import com.example.luvisluvproject.domain.tag.repository.MemberTagRepository;
 import com.example.luvisluvproject.domain.tag.repository.TagJpaRepository;
 import com.example.luvisluvproject.domain.tag.repository.TagSearchRepository;
-import com.example.luvisluvproject.domain.tag.enums.TagCategory;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Slice;
 import org.springframework.data.domain.SliceImpl;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -50,6 +51,7 @@ public class TagService {
 	/**
 	 * 태그 수정
 	 */
+	@Transactional
 	public TagResponseDto updateTag(Long tagId, TagRequestDto requestDto) {
 		Tag tag = tagJpaRepository.findById(tagId)
 			.orElseThrow(() -> new IllegalArgumentException("해당 태그가 존재하지 않습니다."));
@@ -60,11 +62,10 @@ public class TagService {
 			.createdByType(requestDto.getCreatedByType())
 			.active(requestDto.isActive())
 			.priority(requestDto.getPriority())
-			.build()
-		);
+			.build());
 
-		Tag updated = tagJpaRepository.save(tag);
-		return TagResponseDto.from(updated);
+		// save 호출 없이 트랜잭션 내 변경 자동 반영
+		return TagResponseDto.from(tag);
 	}
 
 	/**
@@ -83,42 +84,39 @@ public class TagService {
 		Slice<TagDocument> documents = tagSearchRepository.searchByName(keyword, pageable);
 
 		List<TagResponseDto> tagDtos = documents.stream()
-			.map(tag -> TagResponseDto.builder()
-				.id(tag.getId())
-				.name(tag.getName())
-				.category(TagCategory.from(tag.getCategory()))
-				.createdByType(tag.getCreatedByType())
-				.active(tag.isActive())
-				.priority(tag.getPriority())
-				.build())
-			.collect(Collectors.toList());
+			.map(TagDocument::toDto)
+			.toList();
 
 		return new SliceImpl<>(tagDtos, pageable, documents.hasNext());
 	}
 
 	/**
-	 * 사용자에게 태그 할당 - Slice 반환
+	 * 사용자에게 태그 할당 (차이만 반영) - Slice 반환
 	 */
 	@Transactional
 	public Slice<TagResponseDto> assignTagsToMember(Long memberId, List<Long> tagIds, Pageable pageable) {
-		Member member = memberRepository.findById(memberId)
-			.orElseThrow(() -> new IllegalArgumentException("존재하지 않는 회원입니다."));
+		Member member = memberRepository.getReferenceById(memberId);
+		List<MemberTag> existing = memberTagRepository.findAllByMemberId(memberId);
+		Set<Long> existingTagIds = existing.stream()
+			.map(mt -> mt.getTag().getId())
+			.collect(Collectors.toSet());
 
-		memberTagRepository.deleteByMemberId(memberId);
+		List<Long> toAdd = tagIds.stream()
+			.filter(id -> !existingTagIds.contains(id))
+			.toList();
 
-		List<Tag> tags = tagJpaRepository.findAllById(tagIds);
-		List<MemberTag> memberTags = tags.stream()
+		List<MemberTag> toInsert = tagJpaRepository.findAllById(toAdd).stream()
 			.map(tag -> MemberTag.builder()
 				.member(member)
 				.tag(tag)
 				.build())
-			.collect(Collectors.toList());
+			.toList();
 
-		memberTagRepository.saveAll(memberTags);
+		memberTagRepository.saveAll(toInsert);
 
-		List<TagResponseDto> dtoList = tags.stream()
-			.map(TagResponseDto::from)
-			.collect(Collectors.toList());
+		List<TagResponseDto> dtoList = memberTagRepository.findAllByMemberId(memberId).stream()
+			.map(mt -> TagResponseDto.from(mt.getTag()))
+			.toList();
 
 		boolean hasNext = dtoList.size() > pageable.getPageSize();
 		List<TagResponseDto> content = hasNext ? dtoList.subList(0, pageable.getPageSize()) : dtoList;
@@ -127,18 +125,15 @@ public class TagService {
 	}
 
 	/**
-	 * 사용자 ID로 태그 조회 - Slice 반환
+	 * 사용자 ID로 태그 조회 - Slice 적용
 	 */
 	public Slice<TagResponseDto> getTagsByMemberId(Long memberId, Pageable pageable) {
-		List<MemberTag> memberTags = memberTagRepository.findAllByMemberId(memberId);
+		Page<MemberTag> page = memberTagRepository.findByMemberId(memberId, pageable);
 
-		List<TagResponseDto> dtoList = memberTags.stream()
+		List<TagResponseDto> dtoList = page.getContent().stream()
 			.map(mt -> TagResponseDto.from(mt.getTag()))
-			.collect(Collectors.toList());
+			.toList();
 
-		boolean hasNext = dtoList.size() > pageable.getPageSize();
-		List<TagResponseDto> content = hasNext ? dtoList.subList(0, pageable.getPageSize()) : dtoList;
-
-		return new SliceImpl<>(content, pageable, hasNext);
+		return new SliceImpl<>(dtoList, pageable, page.hasNext());
 	}
 }
